Finalized documentation
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>